Updates Fix type getting cut off in detail Redesign WL, WLI and WLQ

--- a/src/app/components/watchlist-items/watchlist-items.page.scss
+++ b/src/app/components/watchlist-items/watchlist-items.page.scss
@@ -141,3 +141,9 @@ ion-list.md.list-md {
      min-width: 1000px;
      overflow: auto;
 }
+
+ion-list ion-item ion-grid {
+     background-color: #F1EBE4;
+     border-style: dashed;
+     border-width: 1px;
+}
